<resources>
    <string name="app_name">কৃষকের জানালা</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">কৃষকের জানালা</string>
    <string name="nav_header_subtitle">আপনার ফসলের সমস্যার সমাধান এখানেই</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">নীড় পাতা </string>
    <string name="menu_info">পরিচিতি</string>
    <string name="menu_about">অ্যাপস সম্পর্কে</string>
    <string name="menu_use">ব্যবহারবিধি</string>
    <string name="menu_careful">বিশেষ সতর্কবার্তা </string>
    <string name="menu_ask">সচরাচর জিজ্ঞাসা</string>
    <string name="menu_communication">যোগাযোগ</string>
    <string name="menu_login">লগইনকরুন</string>
    <string name="menu_share">শেয়ার করুন</string>
    <string name="menu_rating">রেটিং করুন</string>
    <string name="menu_out">বাহির</string>
    <string name="dises">রোগ যাচাই করুন</string>
    <string name="cropdises">ফসলের রোগসমূহ</string>
    <string name="discamera">যাচাই করুন</string>
    <string name="disescrop">ফসলের রোগসমূহ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deasesclick">আপনার ফসলের সমস্যাটিতে ক্লিক করুন</string>
    <string name="deasesidenty">রোগ নির্ণয়</string>
    <string name="checkdeases">সম্ভাব্য রোগ</string>
    <string name="deases_descrip">রোগের বর্ণনা</string>
</resources>